# trust_index

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .vercelignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Makefile  Procfile  README.md  alembic.ini  cli.py  daily_briefing.py  docker-compose.yml  ef  entrypoint.sh  pyproject.toml  requirements-training.txt  requirements.txt  vercel.json
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
alembic/: env.py
alerts/: alert_engine.py  buy_the_dip.py  delivery.py
analysis/: anomaly_detector.py  comparables.py  earnings_analyzer.py  filing_analyzer.py  risk_metrics.py  sector_rotation.py  sentiment.py  technicals.py  thesis_matcher.py
api/: admin_page.py  admin_routes.py  app.py  auth_routes.py  briefing_routes.py  chat_routes.py  dependencies.py  rate_limit.py  simulation_page.py  simulation_routes.py  ticker_routes.py
chat/: engine.py  feature_capture.py  personas.py  router.py  tools.py
config/: settings.py  theses.yaml  tickers.yaml
core/: database.py  events.py  models.py  security.py
docs/: Agentic_Systems_Best_Practices_v3.md  UX_Audit.md  UX_Audit_Internal.md  UX_Audit_Mobile.md  UX_Remediation_Plan.md  UX_Test_2.md  architecture_ml_pipeline.md  pm_brief.md  pm_brief.md.j2  prompt_identity_notes.md  statistical_methodology.md  vision_and_audit_response.md
frontend/: .env.production  package-lock.json  package.json  tsconfig.app.json
ingestion/: earnings_calendar.py  earnings_transcripts.py  fundamentals.py  insider_trades.py  institutional.py  intraday.py  (+5 more)
(+143 files in other folders)
