[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "edgefinder"
version = "0.1.0"
description = "Market Intelligence Platform — SEC filings, sentiment, technicals, daily briefing"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: pure logic tests (no I/O)",
    "integration: requires database",
    "api: FastAPI route tests",
    "e2e: browser tests (slow)",
    "slow: marks tests as slow (deselect with '-m not slow')",
]
filterwarnings = [
    "ignore::DeprecationWarning:yfinance",
    "ignore::DeprecationWarning:pandas_ta",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
ignore_missing_imports = true
